# dns-resolver

./: .gitignore  README.md  echo-client.cpp  echo-server.cpp  echoServer.cpp  main.cpp
include/: Packet.h  UDPSocket.h
scripts/: README.md  build.sh  configure.sh  run.sh  test.sh
src/: CMakeLists.txt  UDPSocket.cpp  library_directories.cmake  main.cpp  project_config.h.in
src/libraries/: CMakeLists.txt
src/libraries/my_library/include/: my_library.h
src/libraries/my_library/src/: CMakeLists.txt  my_library.cpp
src/tests/: CMakeLists.txt
src/tests/demo_test_suite_1/: CMakeLists.txt  tester_1.cpp  tester_2.cpp
